--- a/css/style.css
+++ b/css/style.css
@@ -21,9 +21,6 @@
 
 html {
     font-size: 62.5%;
-    overflow-x: hidden;
-    scroll-padding-top: 7rem;
-    scroll-behavior: smooth;
 }
 
 section {
@@ -32,12 +29,10 @@ section {
 
 .heading {
     font-size: 9rem;
-    text-transform: uppercase;
     color: transparent;
     -webkit-text-stroke: .05rem var(--main-color);
     letter-spacing: .2rem;
     text-align: center;
-    pointer-events: none;
     position: relative;
 }
 
@@ -46,7 +41,6 @@ section {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 100%;
     color: var(--main-color);
     font-size: 3rem;
 }
@@ -61,10 +55,6 @@ section {
     font-size: 1.7rem;
 }
 
-
-
-/* HEADER */
-
 .header {
     position: fixed;
     top: 0;
@@ -76,7 +66,7 @@ section {
     z-index: 100;
     background: #e4d5ae;
     box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
-    padding: 2rem 9%;
+    padding: 1.5rem 9%;
 }
 
 .header .logo {
@@ -89,7 +79,7 @@ section {
 }
 
 .header .navbar a {
-    margin: 0 1rem;
+    margin: 1rem;
     font-size: 1.7rem;
     color: var(--main-color);
 }
@@ -109,7 +99,7 @@ section {
 .home {
     min-height: 100vh;
     padding-top: 12rem;
-    background: url(../image/home-bg.jpg) no-repeat;
+    background: url(../image/home-bg.jpg) ;
     background-position: center;
     background-size: cover;
 }
