--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ html {
     font-size: 62.5%;
 }
 
+
 section {
     padding: 2rem 9%;
 }
@@ -199,8 +200,6 @@ section {
     color: var(--main-color);
 }
 
-/* MENU */
-
 .menu {
     background: url(../image/menu-bg.jpg) no-repeat;
     background-position: center;
@@ -227,8 +226,6 @@ section {
     margin-left: 6rem;
 }
 
-
-
 .menu .box-container .box img {
     height: 8rem;
     margin-left: -6rem;
@@ -253,8 +250,88 @@ section {
     line-height: 1.8;
 }
 
+ul li {
+    cursor: pointer;
+    position: relative;
+    padding: 12px 8px 12px 40px;
+    background: #eee;
+    font-size: 18px;
+    transition: 0.2s;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    list-style: none;
+    }
+    ul li:nth-child(odd) {
+    background: #f9f9f9;
+    }
+  ul li:hover {
+    background: #ddd;
+    background-color: #e6d9ce;
+  }
+  
+  ul li.checked {
+    background: #888;
+    color: #fff;
+    background-color: #d1ac8c;
+  }
+  
+  
+  .close {
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 12px 16px 12px 16px;
+  }
+  
+  .close:hover {
+    background-color: #f44336;
+    color: white;
+  }
+  
+  .header1 {
+    background-color: #f5d5b9;
 
+    padding: 30px 40px;
+    color: white;
+    text-align: center;
 
+  }
+  
+  .header1:after {
+    content: "";
+    display: table;
+    clear: both;
+
+  }
+  
+  input {
+    margin: 0;
+    border: none;
+    border-radius: 0;
+    width: 75%;
+    padding: 10px;
+    float: left;
+    font-size: 16px;
+  }
+  
+  .addBtn {
+    padding: 10px;
+    width: 25%;
+    background: #d9d9d9;
+    color: #555;
+    float: left;
+    text-align: center;
+    font-size: 16px;
+    cursor: pointer;
+    transition: 0.3s;
+    border-radius: 0;
+  }
+  
+  .addBtn:hover {
+    background-color: #ecbe82;
+  }
 
 .book {
     padding-top: 7rem;
@@ -269,8 +346,11 @@ section {
     border-radius: var(--border-radius-hover);
     padding: 3rem;
     border: var(--border);
+    padding-bottom: 8rem;
 }
-
+.book form .btn{
+transform: translateX(15%);
+}
 .book form .box {
     width: 100%;
     padding: 1rem 1.2rem;
@@ -283,16 +363,12 @@ section {
     margin: .7rem 0;
 }
 
-
 .book form textarea {
     height: 15rem;
     resize: none;
 }
 
-
-
 .footer .credit  {
     font-size: 30px;
     text-align: center;
 }
-
