--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1,10 +1,11 @@
 body {
     direction: rtl;
     margin: 0;
+    background-image: url("../Image/nature-background.jpg");
+    background-size: contain;
 }
 
 header {
-    background-color: #c6c6c6;
     padding-right: 20px;
     padding-left: 20px;
     display: flex;
@@ -39,7 +40,6 @@ nav a {
     justify-content: center;
     margin: 0 auto;
     display: flex;
-    background-color: rgb(152, 174, 187);
     padding: 0 100px;
 }
 
